--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}{% endblock %}</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://unpkg.com/htmx.org@1.9.4"></script>
         {% include 'navbar.html' %}
     </head>
     <body>
