--- a/templates/customer.html
+++ b/templates/customer.html
@@ -2,6 +2,19 @@
 {% block title %} Home {% endblock %}
 {% block body %} 
     <div class="container mt-4">
+        <div class="row">
+            <div class="col d-flex justify-content-between align-items-center">
+                <form class="mb-0 d-flex" action="" method="post" autocomplete="off"> 
+                    <!-- Left side: Search bar and button -->
+                    <input type="text" class="form-control me-2" name="query" id="query" placeholder="Search">
+                    <input type="submit" value="Search" class="btn btn-secondary" name="">
+                </form> 
+                <!-- Right side: Button -->
+                <button class="btn btn-success align-right" data-bs-toggle="modal" data-bs-target="#insert_modal">Add New Customer</button>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-4">
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 {% for message in messages %}
@@ -21,7 +34,7 @@
                     <th scope="col">Actions</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="results">
                 {% for customer in customers %}
                     <tr>
                         <td class="align-middle"  scope="row">{{customer.id}}</td>
@@ -77,7 +90,7 @@
                             <a href="/insert_vehical/{{customer.id}}" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#insert_vehical{{customer.id}}">Add Vehical</a>
                         </td>
                     </tr>
-
+                
                     <!-- Model for updating customer -->
                     <div id="update_customer{{customer.id}}" class="modal fade" role="dialog">
                         <div class="modal-dialog">
@@ -94,7 +107,15 @@
                                         </div>
                                         <div class="form-group">
                                             <label>Contact:</label>
-                                            <input type="number" class="form-control" name="contact" value="{{customer.contact}}">
+                                            <input type="text" class="form-control" name="contact" value="{{customer.contact}}">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Address:</label>
+                                            <input type="text" class="form-control" name="address" value="{{customer.address}}">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Email Address:</label>
+                                            <input type="text" class="form-control" name="email_address" value="{{customer.email_address}}">
                                         </div>
                                         <div class="form-group">
                                             <button class="btn btn-warning mt-4" type="submit">Update Customer</button>
