--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
         </a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#insert_modal">Add</button>
+                <!-- <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#insert_modal">Add</button> -->
             </li>
         </ul>
     </div>
