--- a/templates/customer.html
+++ b/templates/customer.html
@@ -14,6 +14,42 @@
             </div>
         </div>
     </div>
+    <!-- Modal for inserting the customer -->
+    <div id="insert_modal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Add Customer</h4>
+            </div>
+            <div class="modal-body">
+                <form action="{{url_for('insert_customer')}}" method="POST">
+                    <div class="form-group">
+                    <label>Name:</label>
+                    <input type="text" class="form-control" name="name" required="1">
+                    </div>
+                    <div class="form-group">
+                        <label>Contact:</label>
+                        <input type="text" class="form-control" name="contact">
+                    </div>
+                    <div class="form-group">
+                        <label>Address:</label>
+                        <input type="text" class="form-control" name="address">
+                    </div>
+                    <div class="form-group">
+                        <label>Email:</label>
+                        <input type="email" class="form-control" name="email">
+                    </div>
+                    <div class="form-group">
+                    <button class="btn btn-primary mt-4" type="submit">Add Customer</button>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+        </div>
+    </div>
     <div class="container mt-4">
         {% with messages = get_flashed_messages() %}
             {% if messages %}
@@ -30,6 +66,10 @@
                     <th scope="col">ID</th>
                     <th scope="col">Name</th>
                     <th scope="col">Contact</th>
+                    <th scope="col">Address</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Created</th>
+                    <th scope="col">Updated</th>
                     <th scope="col">Vehicals</th>
                     <th scope="col">Actions</th>
                 </tr>
@@ -40,6 +80,10 @@
                         <td class="align-middle"  scope="row">{{customer.id}}</td>
                         <td class="align-middle">{{customer.name}}</td>
                         <td class="align-middle">{{customer.contact}}</td>
+                        <td class="align-middle">{{customer.address}}</td>
+                        <td class="align-middle">{{customer.email}}</td>
+                        <td class="align-middle">{{customer.create_dttm}}</td>
+                        <td class="align-middle">{{customer.update_dttm}}</td>
                         <td>
                             {% for vehical in customer.vehicals %}
                                 <a href="/update_vehical/{{vehical.id}}" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#update_vehical{{vehical.id}}">{{vehical.number}}</a>
@@ -87,7 +131,7 @@
                         <td>
                             <a href="/update_customer/{{customer.id}}" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#update_customer{{customer.id}}">Update</a>
                             <a href="/delete_customer/{{customer.id}}" class="btn btn-danger" onclick="return confirm('Are you sure to delete?')">Delete</a>
-                            <a href="/insert_vehical/{{customer.id}}" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#insert_vehical{{customer.id}}">Add Vehical</a>
+                            <a href="/insert_vehical/{{customer.id}}" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#insert_vehical{{customer.id}}">Add Vehical</a>
                         </td>
                     </tr>
                 
@@ -114,8 +158,8 @@
                                             <input type="text" class="form-control" name="address" value="{{customer.address}}">
                                         </div>
                                         <div class="form-group">
-                                            <label>Email Address:</label>
-                                            <input type="text" class="form-control" name="email_address" value="{{customer.email_address}}">
+                                            <label>Email:</label>
+                                            <input type="text" class="form-control" name="email" value="{{customer.email}}">
                                         </div>
                                         <div class="form-group">
                                             <button class="btn btn-warning mt-4" type="submit">Update Customer</button>
