--- a/harithmapos/templates/register.html
+++ b/harithmapos/templates/register.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% block title %} Home {% endblock %}
 {% block body %}
 <div class="container mt-4">
     <div class="row justify-content-center">
@@ -9,7 +8,7 @@
                     <h4 class="card-title mt-2">Register Form</h4>
                 </header>
                 <article class="card-body">
-                    <form action="" method="POST">
+                    <form method="POST" action="">
                         {{ form.hidden_tag() }}
                         <fieldset class="form-group">
                             <div class="form-group">
@@ -26,16 +25,28 @@
                             </div>
                             <div class="form-group">
                                 {{ form.confirm_password.label(class="form-control-label mt-1") }}
-                                {{ form.confirm_password(class="form-control form-control-lg") }}
+                                {% if form.confirm_password.errors %}
+                                    {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
+                                    <div class="invalid-feedback">
+                                        {% for error in form.confirm_password.errors %}
+                                            <span>{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
+                                {% else %}
+                                    {{ form.confirm_password(class="form-control form-control-lg") }}
+                                {% endif %}
                             </div>
                         </fieldset>
                         <div class="form-group">
-                            {{ form.submit.label(class="btn btn-outline-info mt-3") }}
+                            {{ form.submit(class="btn btn-outline-info mt-3") }}
                         </div>
-                        <small class="text-muted mt-2">By clicking the 'Sign Up' button, you confirm that you accept our Terms of use and Privacy Policy.</small>
                     </form>
                 </article>
-                <div class="border-top card-body text-center">Have an account? <a href="">Log In</a></div>
+                <div class="border-top card-body text-center">
+                    <small class="text-muted">
+                        Have an account? <a href="{{ url_for('login') }}">Log In</a>
+                    </small>
+                </div>
             </div>
         </div>
     </div>
