--- a/harithmapos/templates/navbar.html
+++ b/harithmapos/templates/navbar.html
@@ -4,9 +4,12 @@
             <img src="{{url_for('static', filename='flasklogo.png')}}" width="100" height="50" class="d-inline-block align-text-top" alt="">
         </a>
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <!-- <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#insert_modal">Add</button> -->
-            </li>
+            {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+            {% else %}
+                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+            {% endif %}
         </ul>
     </div>
 </nav>
