--- a/harithmapos/templates/navbar.html
+++ b/harithmapos/templates/navbar.html
@@ -5,6 +5,8 @@
         </a>
         <ul class="navbar-nav">
             {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('customer') }}">Customer</a>
+                <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
             {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
