--- a/harithmapos/templates/customer.html
+++ b/harithmapos/templates/customer.html
@@ -7,7 +7,7 @@
                 <form class="mb-0 d-flex" action="" method="post" autocomplete="off"> 
                     <!-- Left side: Search bar and button -->
                     <input type="text" class="form-control me-2" name="query" id="query" placeholder="Search">
-                    <input type="submit" value="Search" class="btn btn-secondary" name="">
+                    <input type="submit" value="Search" class="btn btn-primary" name="">
                 </form> 
                 <!-- Right side: Button -->
                 <button type="button" class="btn btn-success align-right" data-bs-toggle="modal" data-bs-target="#insert_modal">Add New Customer</button>
