--- a/harithmapos/templates/reset_request.html
+++ b/harithmapos/templates/reset_request.html
@@ -15,7 +15,7 @@
             {% endwith %}
             <div class="card">
                 <header class="card-header">
-                    <h4 class="card-title mt-2">Login Form</h4>
+                    <h4 class="card-title mt-2">Reset Password Form</h4>
                 </header>
                 <article class="card-body">
                     <form method="POST" action="">
@@ -23,30 +23,23 @@
                         <fieldset class="form-group">
                             <div class="form-group">
                                 {{ form.email.label(class="form-control-label mt-1") }}
-                                {{ form.email(class="form-control form-control-lg") }}
-                            </div>
-                            <div class="form-group">
-                                {{ form.password.label(class="form-control-label mt-1") }}
-                                {{ form.password(class="form-control form-control-lg") }}
-                            </div>
-                            <div class="form-check mt-3">
-                                {{ form.remember(class="form-check-input") }}
-                                {{ form.remember.label(class="form-check-label") }}
+                                {% if form.email.errors %}
+                                    {{ form.email(class="form-control form-control-lg is-invalid") }}
+                                    <div class="invalid-feedback">
+                                        {% for error in form.email.errors %}
+                                            <span>{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
+                                {% else %}
+                                    {{ form.email(class="form-control form-control-lg") }}
+                                {% endif %}
                             </div>
                         </fieldset>
-                        <div class="form-group mt-3">
-                            {{ form.submit(class="btn btn-outline-info") }}
-                            <small class="text-muted">
-                                <a href="{{ url_for('reset_request') }}">Forgot Password?</a>
-                            </small>
+                        <div class="form-group">
+                            {{ form.submit(class="btn btn-outline-info mt-3 mb-3") }}
                         </div>
                     </form>
                 </article>
-                <div class="border-top card-body text-center">
-                    <small class="text-muted">
-                        Don't have an account? <a href="{{ url_for('register') }}">Register</a>
-                    </small>
-                </div>
             </div>
         </div>
     </div>
