--- a/harithmapos/templates/supplier.html
+++ b/harithmapos/templates/supplier.html
@@ -4,10 +4,10 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col d-flex justify-content-between align-items-center">
-                <form class="mb-0 d-flex" action="" method="POST" autocomplete="off">
-                    {{ supplier_create_form.hidden_tag() }}
-                    {{ search_form.query(class="form-control me-2") }}
-                    {{ search_form.submit(class="btn btn-primary") }}
+                <form class="mb-0 d-flex" action="" method="GET" autocomplete="off">
+                    <input type="text" class="form-control me-2" name="query" id="query" placeholder="{{ query if query else 'Search'}}">
+                    <input type="submit" value="Search" class="btn btn-primary me-2" name="">
+                    <a href="{{ url_for('supplier') }}"><input type="submit" value="Reset" class="btn btn-secondary" ></a>
                 </form> 
                 <!-- Right side: Button -->
                 <button type="button" class="btn btn-success align-right" data-bs-toggle="modal" data-bs-target="#insert_modal">Add New supplier</button>
@@ -119,19 +119,19 @@
         </table>
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-end">
-                <li class="page-item"><a class="page-link" href="{{ url_for('supplier', page=suppliers.prev_num) }}">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="{{ url_for('supplier', page=suppliers.prev_num, query=query) }}">Previous</a></li>
                 {% for page_number in suppliers.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
                     {% if page_number %}
                         {% if suppliers.page == page_number %}
-                            <li class="page-item "><a class="page-link active" href="{{ url_for('supplier', page=page_number) }}">{{ page_number }}</a></li>
+                            <li class="page-item "><a class="page-link active" href="{{ url_for('supplier', page=page_number, query=query) }}">{{ page_number }}</a></li>
                         {% else %}
-                            <li class="page-item "><a class="page-link" href="{{ url_for('supplier', page=page_number) }}">{{ page_number }}</a></li>
+                            <li class="page-item "><a class="page-link" href="{{ url_for('supplier', page=page_number, query=query) }}">{{ page_number }}</a></li>
                         {% endif %}
                     {% else %}
                         <li class="page-item "><a class="page-link" href="#">...</a></li>
                     {% endif %}
                 {% endfor %}
-                <li class="page-item"><a class="page-link" href="{{ url_for('supplier', page=suppliers.next_num) }}">Next</a></li>
+                <li class="page-item"><a class="page-link" href="{{ url_for('supplier', page=suppliers.next_num, query=query) }}">Next</a></li>
             </ul>
         </nav>
     </div>
