--- a/harithmapos/templates/login.html
+++ b/harithmapos/templates/login.html
@@ -37,14 +37,14 @@
                         <div class="form-group mt-3">
                             {{ form.submit(class="btn btn-outline-info") }}
                             <small class="text-muted">
-                                <a href="{{ url_for('reset_request') }}">Forgot Password?</a>
+                                <a href="{{ url_for('user_blueprint.reset_request') }}">Forgot Password?</a>
                             </small>
                         </div>
                     </form>
                 </article>
                 <div class="border-top card-body text-center">
                     <small class="text-muted">
-                        Don't have an account? <a href="{{ url_for('register') }}">Register</a>
+                        Don't have an account? <a href="{{ url_for('user_blueprint.register') }}">Register</a>
                     </small>
                 </div>
             </div>
