--- a/harithmapos/templates/navbar.html
+++ b/harithmapos/templates/navbar.html
@@ -5,13 +5,13 @@
         </a>
         <ul class="navbar-nav">
             {% if current_user.is_authenticated %}
-                <a class="nav-item nav-link" href="{{ url_for('customer') }}">Customer</a>
-                <a class="nav-item nav-link" href="{{ url_for('supplier') }}">Supplier</a>
-                <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
-                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                <a class="nav-item nav-link" href="{{ url_for('customer_blueprint.customer') }}">Customer</a>
+                <a class="nav-item nav-link" href="{{ url_for('supplier_blueprint.supplier') }}">Supplier</a>
+                <a class="nav-item nav-link" href="{{ url_for('user_blueprint.account') }}">Account</a>
+                <a class="nav-item nav-link" href="{{ url_for('user_blueprint.logout') }}">Logout</a>
             {% else %}
-                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                <a class="nav-item nav-link" href="{{ url_for('user_blueprint.login') }}">Login</a>
+                <a class="nav-item nav-link" href="{{ url_for('user_blueprint.register') }}">Register</a>
             {% endif %}
         </ul>
     </div>
