--- a/harithmapos/templates/register.html
+++ b/harithmapos/templates/register.html
@@ -53,7 +53,7 @@
                 </article>
                 <div class="border-top card-body text-center">
                     <small class="text-muted">
-                        Have an account? <a href="{{ url_for('login') }}">Log In</a>
+                        Have an account? <a href="{{ url_for('user_blueprint.login') }}">Log In</a>
                     </small>
                 </div>
             </div>
