--- a/harithmapos/templates/navbar.html
+++ b/harithmapos/templates/navbar.html
@@ -5,8 +5,18 @@
         </a>
         <ul class="navbar-nav">
             {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('item_blueprint.item') }}">Item</a>
                 <a class="nav-item nav-link" href="{{ url_for('customer_blueprint.customer') }}">Customer</a>
                 <a class="nav-item nav-link" href="{{ url_for('supplier_blueprint.supplier') }}">Supplier</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Other</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{{ url_for('washbay_blueprint.washbay') }}">Was Bay</a></li>
+                        <!-- <li><a class="dropdown-item" href="#">Another action</a></li> -->
+                        <!-- <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+                    </ul>
+                </li>
                 <a class="nav-item nav-link" href="{{ url_for('user_blueprint.account') }}">Account</a>
                 <a class="nav-item nav-link" href="{{ url_for('user_blueprint.logout') }}">Logout</a>
             {% else %}
