--- a/harithmapos/templates/navbar.html
+++ b/harithmapos/templates/navbar.html
@@ -11,7 +11,8 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Other</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{{ url_for('washbay_blueprint.washbay') }}">Was Bay</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('employee_blueprint.employee') }}">Employee</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('washbay_blueprint.washbay') }}">Wash Bay</a></li>
                         <!-- <li><a class="dropdown-item" href="#">Another action</a></li> -->
                         <!-- <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li> -->
